# dawn-messageserver

./: .gitignore  Cargo.toml  README.md  SPECIFICATIONS  backup.sh  tests.sh
src/: handles.rs  internal.rs  main.rs  request_schemes.rs  response_schemes.rs
test-data/: test1  test2
