[package]
name = "dawn-messageserver-n2g"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "*" }
regex = { version = "*" }
openssl = { version = "*", features = ["vendored"]}
hex = { version = "*" }
serde = { version = "*" , features = ["derive"]}
lazy_static = { version = "*" }
futures = { version = "*" }
chrono = { version = "*" }
