[package]
name = "dawn-messageserver-n2g"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "*" }
regex = { version = "*" }
openssl = { version = "*", features = ["vendored"]}
hex = { version = "*" }
serde = { version = "=1.0.171" , features = ["derive"]}
lazy_static = { version = "*" }
futures = { version = "*" }
chrono = { version = "*" }
tokio = { version = "*", features = ["full"]}
fs4 = { version = "*", features = ["tokio", "tokio-async"] }

[profile.release]
lto = true
